# Crossroads

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  Utils.h  main.cpp
app/ErrorCode/: ErrorCode.h
app/RoadMediator/: IRoadMediator.h  RoadMediator.h
app/TrafficLight/: ITrafficLight.h  RoadwayType.h  RoadСontroller.h  TrafficLight.h  TrafficLightBase.h  TrafficLightEvent.h  TrafficLightState.h  TrafficLightType.h
